WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258847
Resizing a fullscreen element doesn't always resize children to the correct size
https://bugs.webkit.org/show_bug.cgi?id=258847
Summary
Resizing a fullscreen element doesn't always resize children to the correct size
Mike Wyrzykowski
Reported
2023-07-04 00:36:24 PDT
Resizing a fullscreen element doesn't always resize to the full size
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2023-07-04 01:18:33 PDT
radar://110880116
Mike Wyrzykowski
Comment 2
2023-07-06 14:09:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15611
EWS
Comment 3
2023-07-24 11:11:02 PDT
Committed
266257@main
(d7f28b8f18d6): <
https://commits.webkit.org/266257@main
> Reviewed commits have been landed. Closing PR #15611 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug